fix z-index in slick-dotes

--- a/#src/scss/_header-slider.scss
+++ b/#src/scss/_header-slider.scss
@@ -11,7 +11,6 @@
     width: 100%;
     height: 100vh;
     position: relative;
-    z-index: -1;
     @media screen and (max-width: 425px) {
         height: 93vh;
     }
@@ -23,16 +22,21 @@
     }
     &__inner{
         width: 100%;
-        height: 100%;
+        height: 100vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
         background-repeat: no-repeat;
-        background-position: top 25px right;
+        background-position: top 70px right;
         background-size: contain;
         padding-top: 50px;
         position: relative;
+        // @media screen and (max-width: 1440px) {
+        //     background-position: top 50px right;
+        //     background-size: contain;
+        //     padding-top: 50px;
+        // }
         @media screen and (max-width: 1200px) {
             background-position: top 40px right;
         }
@@ -47,6 +51,9 @@
         }
     }
 }  
+.slick-list {
+    z-index: -1;
+}
 .pet-tag {
     background: $secondaryBGcol;
     z-index: 3;
@@ -56,8 +63,9 @@
     text-align-last: left;
     box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.2);
     padding: 0.2em  0.8em;
+    z-index: 8;
     @media screen and (max-width: 425px) {
-        bottom: 17%;
+        bottom: 15%;
         right: 1%;
     }
     &__name {
@@ -87,25 +95,25 @@
 }
 .header-slider .slick-dots {
     display: flex;
-    margin-top: -95px;
+    margin-top: -200px;
     outline: none;
+    padding: 0;
     @media screen and (max-width: 1024px) {
-        margin-top: -30px;
+        margin-top: -65px;
         justify-content: center;
     }
-    & li{
+    & li {
         list-style: none;
         margin: 0 10px;
         z-index: 6;
-        &:focus,
-        &:active {
-            outline: none;
+            &:focus,
+            &:active {
+                outline: none;
             }
-        &.slick-active button{
-            background: $primaryBGcol;
-            transition: all .3s;
-            outline: none;
-        }
+            &.slick-active button{
+                    background: $primaryBGcol;
+                    transition: all .1s;
+            }
     }
     & button {
         width: 18px;
@@ -117,6 +125,10 @@
         padding: 0;
         margin-bottom: 40px;
         cursor: pointer;
+        &:focus,
+        &:active {
+            outline: none;
+        }
         @media screen and (max-width: 1024px) {
             width: 11px;
             height: 11px;
