--- a/#src/scss/main.scss
+++ b/#src/scss/main.scss
@@ -44,10 +44,14 @@ body {
 //     overflow-x: hidden;
 // }
 .container {
-    max-width: 1180px;
+    max-width: 1500px;
     margin: auto;
-    padding: 0 20px;
+    padding: 0 35px;
     box-sizing: border-box;
+    @media (max-width: 1440px) {
+        max-width: 1180px;
+        padding: 0 20px;
+    }
     @media (max-width: 1024px) {
         padding: 0 30px;
     }
